--- a/lab/simple_test/mutation_operators/and_or_replacement/Makefile
+++ b/lab/simple_test/mutation_operators/and_or_replacement/Makefile
@@ -1,4 +1,4 @@
-CC=clang
+CC=/opt/llvm-3.9/bin/clang
 LEVEL=../../../..
 FIXTURES_DIR=$(LEVEL)/unittests/fixtures/simple_test/mutation_operators/and_or_replacement/
 
