--- a/unittests/fixtures/.gitignore
+++ b/unittests/fixtures/.gitignore
@@ -17,3 +17,5 @@ google_test/google_test/Testee.bc
 custom_test/distance/distance.ll
 custom_test/distance/main.ll
 custom_test/distance/test.ll
+simple_test/count_letters/count_letters.bc
+simple_test/count_letters/test_count_letters.bc
