Generate fixtures for dylibs and object files

--- a/lab/Makefile
+++ b/lab/Makefile
@@ -1,6 +1,5 @@
 synchronize_fixtures:
 	cd ./custom_test/ && make synchronize_fixtures
-	cd ./dylibs/ && make synchronize_fixtures
 	cd ./google_test/google_test/ && make synchronize_fixtures
 	cd ./simple_test/mutation_operators/and_or_replacement && make synchronize_fixtures
 	cd ./simple_test/mutation_operators/and_or_replacement_cpp/ && make synchronize_fixtures
@@ -12,10 +11,10 @@ synchronize_fixtures:
 	cd ./simple_test/mutation_operators/replace_call/ && make synchronize_fixtures
 	cd ./simple_test/mutation_operators/scalar_value/ && make synchronize_fixtures
 	cd ./simple_test/count_letters && make synchronize_fixtures
+	cd ./dylibs_and_objects && make synchronize_fixtures
 
 clean:
 	cd ./custom_test/ && make clean
-	cd ./dylibs/ && make clean
 	cd ./google_test/google_test/ && make clean
 	cd ./simple_test/mutation_operators/and_or_replacement/ && make clean
 	cd ./simple_test/mutation_operators/and_or_replacement_cpp/ && make clean
@@ -27,4 +26,5 @@ clean:
 	cd ./simple_test/mutation_operators/replace_call/ && make clean
 	cd ./simple_test/mutation_operators/scalar_value/ && make clean
 	cd ./simple_test/count_letters && make clean
+	cd ./dylibs_and_objects && make clean
 
