--- a/unittests/CMakeLists.txt
+++ b/unittests/CMakeLists.txt
@@ -17,6 +17,8 @@ set(mull_unittests_sources
   MutationOperators/RemoveVoidFunctionMutationOperatorTest.cpp
   MutationOperators/ScalarValueMutationOperatorTest.cpp
 
+  MutationOperators/CXX/Conditionals/BoundaryMutatorTests.cpp
+
   SimpleTest/SimpleTestFinderTest.cpp
 
   GoogleTest/GoogleTestFinderTest.cpp
