--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -52,11 +52,12 @@ set(mull_sources
   CustomTestFramework/CustomTestFinder.cpp
 
   IDEDiagnostics.cpp
-  SQLiteReporter.cpp
 
   Metrics/Metrics.cpp
 
   JunkDetection/CXX/CXXJunkDetector.cpp
+
+  Reporters/SQLiteReporter.cpp
 )
 
 set(mull_header_dirs
