--- a/lab/simple_test/mutators/math_sub/Makefile
+++ b/lab/simple_test/mutators/math_sub/Makefile
@@ -1,4 +1,5 @@
-CC=/opt/llvm-3.9/bin/clang
+include ../../../Makefile.common
+
 LEVEL=../../../..
 FIXTURES_DIR=$(LEVEL)/unittests/fixtures/simple_test/mutators/math_sub/
 
