--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -81,6 +81,15 @@ set(mull_additional_libraries
   ${MULL_DEPENDENCY_LIBCLANG}
   ${MULL_DEPENDENCY_LIBCLANG_TOOLING}
   ${MULL_DEPENDENCY_LIBCLANG_BASIC}
+  ${MULL_DEPENDENCY_LIBCLANG_FRONTEND}
+  ${MULL_DEPENDENCY_LIBCLANG_AST}
+  ${MULL_DEPENDENCY_LIBCLANG_DRIVER}
+  ${MULL_DEPENDENCY_LIBCLANG_LEX}
+  ${MULL_DEPENDENCY_LIBCLANG_SEMA}
+  ${MULL_DEPENDENCY_LIBCLANG_SERIALIZATION}
+  ${MULL_DEPENDENCY_LIBCLANG_ANALYSIS}
+  ${MULL_DEPENDENCY_LIBCLANG_PARSE}
+  ${MULL_DEPENDENCY_LIBCLANG_EDIT}
 )
 
 set(mull_link_flags "") # to be filled later
