--- a/.travis.yml
+++ b/.travis.yml
@@ -7,14 +7,8 @@ os:
 - osx
 
 before_install:
-- if [[ "${TRAVIS_OS_NAME}" == "osx" ]]; then brew update; fi
-- if [[ "${TRAVIS_OS_NAME}" == "osx" ]]; then brew upgrade cmake; fi
-- if [[ "${TRAVIS_OS_NAME}" == "osx" ]]; then brew install zlib; fi
-- if [[ "${TRAVIS_OS_NAME}" == "osx" ]]; then brew install ncurses; fi
-- if [[ "${TRAVIS_OS_NAME}" == "osx" ]]; then brew install sqlite; fi
-- if [[ "${TRAVIS_OS_NAME}" == "osx" ]]; then brew install ninja; fi
+- if [[ "${TRAVIS_OS_NAME}" == "osx" ]]; then make -f Makefile.macos travis_install; fi
 - pwd
-- cd /opt && sudo wget http://releases.llvm.org/3.9.0/clang+llvm-3.9.0-x86_64-apple-darwin.tar.xz && sudo tar xvf clang+llvm-3.9.0-x86_64-apple-darwin.tar.xz && sudo mv clang+llvm-3.9.0-x86_64-apple-darwin llvm-3.9
 - cd /Users/travis/build/mull-project/mull
 
 # Uncomment this line when support Rust
@@ -22,6 +16,5 @@ before_install:
 
 # Build steps
 script:
-- make -f Makefile.macos travis
-
+- if [[ "${TRAVIS_OS_NAME}" == "osx" ]]; then make -f Makefile.macos travis; fi
 
