--- a/Makefile.ubuntu
+++ b/Makefile.ubuntu
@@ -38,7 +38,7 @@ example: build_ninja_driver
 example_run: build_ninja_driver
 	cd Examples/HelloWorld && make run MULL=$(BUILD_DIR_NINJA)/tools/driver/mull-driver MULL_CC=$(MULL_CC)
 
-travis: test #example
+travis: test example
 
 travis_install:
 	sudo apt-get update
