--- a/Makefile.macos
+++ b/Makefile.macos
@@ -58,7 +58,7 @@ xcode.build: ## Build Xcode project with CMake.
 	rm -rfv $(BUILD_DIR_XCODE)/CMakeCache.txt
 	cd $(BUILD_DIR_XCODE) && cmake ../ -G Xcode \
     $(CMAKE_COMMAND_LINE_DEBUG_FLAGS) \
-    -DCMAKE_TOOLCHAIN_FILE=$(MULL_CMAKE_TOOLCHAIN) \
+    -DLLVM_ROOT=/opt/llvm-3.9 \
     -DMULL_SUPPORT_RUST=0
 
 xcode.rebuild: xcode.build xcode.reopen ## Build Xcode project with CMake, kill Xcode, reopen the project in Xcode
