--- a/.travis.yml
+++ b/.travis.yml
@@ -7,13 +7,12 @@ os:
 
 before_install:
 - if [[ "${TRAVIS_OS_NAME}" == "osx" ]]; then make travis.install.macos; fi
-- if [[ "${TRAVIS_OS_NAME}" == "linux" ]]; then make -f Makefile.ubuntu travis_install; fi
+- if [[ "${TRAVIS_OS_NAME}" == "linux" ]]; then make travis.install.ubuntu; fi
 
 # Uncomment this line when support Rust
 # - if [[ "${TRAVIS_OS_NAME}" == "osx" ]]; then curl -sf https://static.rust-lang.org/rustup.sh | sudo sh; fi
 
 # Build steps
 script:
-- if [[ "${TRAVIS_OS_NAME}" == "osx" ]]; then make travis.test.macos; fi
-- if [[ "${TRAVIS_OS_NAME}" == "linux" ]]; then make -f Makefile.ubuntu travis; fi
+  - make travis.test
 
