--- a/unittests/CMakeLists.txt
+++ b/unittests/CMakeLists.txt
@@ -100,3 +100,9 @@ set_target_properties(MullUnitTests
 add_custom_command(TARGET MullUnitTests POST_BUILD
                    COMMAND ${CMAKE_COMMAND} -E create_symlink
                    ${CMAKE_CURRENT_LIST_DIR}/fixtures $<TARGET_FILE_DIR:MullUnitTests>/fixtures)
+
+target_include_directories(MullUnitTests PUBLIC
+  ${FIXTURES_FACTORY_INCLUDE_DIR}
+)
+
+add_dependencies(MullUnitTests fixtures)
