Do not hardcode shared library type

--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -140,7 +140,7 @@ endif()
 # CMake to regenerate. https://cmake.org/cmake/help/v3.0/command/file.html
 file(GLOB_RECURSE mull_header_files ${MULL_INCLUDE_DIR}/*.h)
 
-add_library(mull SHARED ${mull_sources} ${mull_header_files})
+add_library(mull ${mull_sources} ${mull_header_files})
 
 set_source_files_properties(${mull_header_dirs} PROPERTIES HEADER_FILE_ONLY ON)
 include_directories(${mull_header_dirs})
@@ -190,4 +190,6 @@ endforeach()
 
 INSTALL(TARGETS mull
   LIBRARY DESTINATION lib
+  ARCHIVE DESTINATION lib
 )
+
