--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -72,12 +72,13 @@ set(mull_header_dirs
 )
 
 set(mull_additional_libraries
-  ${MULL_DEPENDENCY_LLVM_LIBRARIES}
-
   ${MULL_DEPENDENCY_LIBZ}
   ${MULL_DEPENDENCY_NCURSES}
-
   ${MULL_DEPENDENCY_SQLITE}
+
+  ${LD_START_GROUP}
+  ${MULL_DEPENDENCY_LLVM_LIBRARIES}
+
   ${MULL_DEPENDENCY_LIBCLANG}
   ${MULL_DEPENDENCY_LIBCLANG_TOOLING}
   ${MULL_DEPENDENCY_LIBCLANG_BASIC}
@@ -90,6 +91,7 @@ set(mull_additional_libraries
   ${MULL_DEPENDENCY_LIBCLANG_ANALYSIS}
   ${MULL_DEPENDENCY_LIBCLANG_PARSE}
   ${MULL_DEPENDENCY_LIBCLANG_EDIT}
+  ${LD_END_GROUP}
 )
 
 set(mull_link_flags "") # to be filled later
