--- a/lab/simple_test/count_letters/Makefile
+++ b/lab/simple_test/count_letters/Makefile
@@ -1,25 +1,38 @@
 include ../../Makefile.common
 
-LEVEL=../../..
-FIXTURES_DIR=$(LEVEL)/unittests/fixtures/simple_test/count_letters/
+BUILD_DIR=$(PWD)/build
+FIXTURES_DIR=$(PWD)/../../../unittests/fixtures/simple_test/count_letters
 
-llvm_ir:
-	$(CC) -g -S -emit-llvm test_count_letters.c
-	$(CC) -g -S -emit-llvm count_letters.c
+SOURCES=$(wildcard *.c)
+OBJECTS=$(addprefix $(BUILD_DIR)/, $(SOURCES:.c=.o))
+BITCODE=$(addprefix $(BUILD_DIR)/, $(SOURCES:.c=.bc))
+LLVM_IR=$(addprefix $(BUILD_DIR)/, $(SOURCES:.c=.ll))
 
-bitcode:
-	$(CC) -g -c -emit-llvm test_count_letters.c
-	$(CC) -g -c -emit-llvm count_letters.c
+binary: $(OBJECTS)
+	$(CC) $^ -o $(BUILD_DIR)/$@
 
-synchronize_fixtures: bitcode $(FIXTURES_DIR)
-	cp ./*.bc $(FIXTURES_DIR)
+bitcode: $(BITCODE)
+
+llvm_ir: $(LLVM_IR)
+
+$(BUILD_DIR)/%.o: %.c $(BUILD_DIR)
+	$(CC) -c -o $@ $<
+
+$(BUILD_DIR)/%.bc: %.c $(BUILD_DIR)
+	$(CC) -emit-llvm -c -o $@ $<
+
+$(BUILD_DIR)/%.ll: %.c $(BUILD_DIR)
+	$(CC) -S -emit-llvm -c -o $@ $<
+
+$(BUILD_DIR):
+	mkdir -p $(BUILD_DIR)
 
 $(FIXTURES_DIR):
 	mkdir -p $(FIXTURES_DIR)
 
-clean:
-	rm -rf main
-	rm -rf *.o
-	rm -rf *.bc
-	rm -rf *.ll
+synchronize_fixtures: llvm_ir bitcode $(FIXTURES_DIR)
+	cp $(BUILD_DIR)/*.ll $(FIXTURES_DIR)
+	cp $(BUILD_DIR)/*.bc $(FIXTURES_DIR)
 
+clean:
+	rm -rf build
