Update fixture: lab/simple_test/mutators/math_sub.

--- a/lab/simple_test/mutators/math_sub/Makefile
+++ b/lab/simple_test/mutators/math_sub/Makefile
@@ -1,30 +1,38 @@
 include ../../../Makefile.common
 
-LEVEL=../../../..
-FIXTURES_DIR=$(LEVEL)/unittests/fixtures/simple_test/mutators/math_sub/
+BUILD_DIR=./build
+FIXTURES_DIR=../../../../unittests/fixtures/simple_test/mutators/math_sub
 
-default: main
-	./main
+SOURCES=$(wildcard *.c)
+OBJECTS=$(addprefix $(BUILD_DIR)/, $(SOURCES:.c=.o))
+BITCODE=$(addprefix $(BUILD_DIR)/, $(SOURCES:.c=.bc))
+LLVM_IR=$(addprefix $(BUILD_DIR)/, $(SOURCES:.c=.ll))
 
-main: math_sub.o
-	$(CC) -Wall -o main math_sub.o main.c
+binary: $(OBJECTS)
+	$(CC) $^ -o $(BUILD_DIR)/$@
 
-math_sub.o:
-	$(CC) -S -emit-llvm math_sub.c
-	$(CC) -c -emit-llvm math_sub.c
-	$(CC) -c math_sub.c
+bitcode: $(BITCODE)
 
-bitcode: math_sub.o
+llvm_ir: $(LLVM_IR)
 
-synchronize_fixtures: bitcode $(FIXTURES_DIR)
-	cp ./*.bc $(FIXTURES_DIR)
+$(BUILD_DIR)/%.o: %.c $(BUILD_DIR)
+	$(CC) -c -o $@ $<
+
+$(BUILD_DIR)/%.bc: %.c $(BUILD_DIR)
+	$(CC) -emit-llvm -c -o $@ $<
+
+$(BUILD_DIR)/%.ll: %.c $(BUILD_DIR)
+	$(CC) -S -emit-llvm -c -o $@ $<
+
+$(BUILD_DIR):
+	mkdir -p $(BUILD_DIR)
 
 $(FIXTURES_DIR):
 	mkdir -p $(FIXTURES_DIR)
 
-clean:
-	rm -rf main
-	rm -rf *.o
-	rm -rf *.bc
-	rm -rf *.ll
+synchronize_fixtures: llvm_ir bitcode $(FIXTURES_DIR)
+	cp $(BUILD_DIR)/*.ll $(FIXTURES_DIR)
+	cp $(BUILD_DIR)/*.bc $(FIXTURES_DIR)
 
+clean:
+	rm -rf build
