--- a/lab/simple_test/mutators/scalar_value/Makefile
+++ b/lab/simple_test/mutators/scalar_value/Makefile
@@ -1,30 +1,37 @@
 include ../../../Makefile.common
 
-LEVEL=../../../..
-FIXTURES_DIR=$(LEVEL)/unittests/fixtures/simple_test/mutators/scalar_value/
+BUILD_DIR=./build
+FIXTURES_DIR=../../../../unittests/fixtures/simple_test/mutators/scalar_value
 
-default: main
-	./main
+SOURCES=$(wildcard *.c)
+OBJECTS=$(addprefix $(BUILD_DIR)/, $(SOURCES:.c=.o))
+BITCODE=$(addprefix $(BUILD_DIR)/, $(SOURCES:.c=.bc))
+LLVM_IR=$(addprefix $(BUILD_DIR)/, $(SOURCES:.c=.ll))
 
-main: scalar_value.o
-	$(CC) -Wall -o main scalar_value.o main.c
+binary: $(OBJECTS)
+	$(CC) $^ -o $(BUILD_DIR)/$@
 
-%.o: %.c
-	$(CC) -S -emit-llvm $*.c
-	$(CC) -c -emit-llvm $*.c
-	$(CC) -c $*.c
+bitcode: $(BITCODE)
 
-bitcode: scalar_value.o
+llvm_ir: $(LLVM_IR)
 
-synchronize_fixtures: bitcode $(FIXTURES_DIR)
-	cp ./*.bc $(FIXTURES_DIR)
+$(BUILD_DIR)/%.o: %.c $(BUILD_DIR)
+	$(CC) -c -o $@ $<
+
+$(BUILD_DIR)/%.bc: %.c $(BUILD_DIR)
+	$(CC) -emit-llvm -c -o $@ $<
+
+$(BUILD_DIR)/%.ll: %.c $(BUILD_DIR)
+	$(CC) -S -emit-llvm -c -o $@ $<
+
+$(BUILD_DIR):
+	mkdir -p $(BUILD_DIR)
 
 $(FIXTURES_DIR):
 	mkdir -p $(FIXTURES_DIR)
 
-clean:
-	rm -rf main
-	rm -rf *.o
-	rm -rf *.bc
-	rm -rf *.ll
+synchronize_fixtures: llvm_ir bitcode $(FIXTURES_DIR)
+	cp $(BUILD_DIR)/scalar_value.bc $(FIXTURES_DIR)
 
+clean:
+	rm -rf build
