Add a tiny compatibility layer to support different versions of LLVM

--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -143,7 +143,11 @@ endif()
 # CMake to regenerate. https://cmake.org/cmake/help/v3.0/command/file.html
 file(GLOB_RECURSE mull_header_files ${MULL_INCLUDE_DIR}/*.h)
 
-add_library(mull ${mull_sources} ${mull_header_files})
+add_library(mull
+  ${mull_sources}
+  ${mull_header_files}
+  $<TARGET_OBJECTS:LLVMCompatibility>
+)
 
 set_source_files_properties(${mull_header_dirs} PROPERTIES HEADER_FILE_ONLY ON)
 include_directories(${mull_header_dirs})
