--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,12 @@ os:
 - osx
 - linux
 
+env:
+- LLVM_VERSION=3.9
+- LLVM_VERSION=4.0
+- LLVM_VERSION=5.0
+- LLVM_VERSION=6.0
+
 before_install:
 - if [[ "${TRAVIS_OS_NAME}" == "osx" ]]; then make travis.install.macos; fi
 - if [[ "${TRAVIS_OS_NAME}" == "linux" ]]; then make travis.install.ubuntu; fi
@@ -15,5 +21,6 @@ before_install:
 
 # Build steps
 script:
-  - make ninja.init travis.test INSTALL_DIR=/tmp/mull
+- if [[ "${TRAVIS_OS_NAME}" == "osx" ]]; then make ninja.init travis.test LLVM_ROOT=/opt/llvm-$LLVM_VERSION INSTALL_DIR=/tmp/mull; fi
+- if [[ "${TRAVIS_OS_NAME}" == "linux" ]]; then make ninja.init travis.test LLVM_ROOT=/usr/lib/llvm-$LLVM_VERSION INSTALL_DIR=/tmp/mull; fi
 
