Add Weak Tests Reporter

--- a/tools/reporter/CMakeLists.txt
+++ b/tools/reporter/CMakeLists.txt
@@ -1,4 +1,9 @@
-add_executable(mull-reporter reporter.cpp)
+add_executable(mull-reporter
+  WeakTestsReporter.h
+  WeakTestsReporter.cpp
+
+  reporter.cpp
+)
 set_target_properties(mull-reporter PROPERTIES
   LINK_FLAGS "${LLVM_LINK_FLAGS} -lLLVMSupport -lsqlite3"
   COMPILE_FLAGS "-fno-rtti"
