Fix build issues

--- a/tools/reporter/CMakeLists.txt
+++ b/tools/reporter/CMakeLists.txt
@@ -1,3 +1,6 @@
+set(llvm_components "orcjit")
+llvm_get_libs(llvm_libraries ${llvm_components})
+string(REPLACE ";" " " llvm_libraries "${llvm_libraries}")
 add_executable(mull-reporter
   WeakTestsReporter.h
   WeakTestsReporter.cpp
@@ -5,7 +8,7 @@ add_executable(mull-reporter
   reporter.cpp
 )
 set_target_properties(mull-reporter PROPERTIES
-  LINK_FLAGS "${LLVM_LINK_FLAGS} -lLLVMSupport -lsqlite3"
+  LINK_FLAGS "${LLVM_LINK_FLAGS} ${llvm_libraries} -lsqlite3"
   COMPILE_FLAGS "-fno-rtti"
 )
 
