Extract ModuleLoadingTask into a separate file

--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -64,6 +64,7 @@ set(mull_sources
 
   Parallelization/Progress.cpp
   Parallelization/TaskExecutor.cpp
+  Parallelization/Tasks/ModuleLoadingTask.cpp
 )
 
 set(mull_header_dirs
@@ -75,6 +76,7 @@ set(mull_header_dirs
   ${MULL_INCLUDE_DIR}/Toolchain
   ${MULL_INCLUDE_DIR}/Instrumentation
   ${MULL_INCLUDE_DIR}/Parallelization
+  ${MULL_INCLUDE_DIR}/Parallelization/Tasks
 )
 
 set(mull_additional_libraries
