Extract instrumented compilation into separate files

--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -65,6 +65,7 @@ set(mull_sources
   Parallelization/Progress.cpp
   Parallelization/TaskExecutor.cpp
   Parallelization/Tasks/ModuleLoadingTask.cpp
+  Parallelization/Tasks/InstrumentedCompilationTask.cpp
 )
 
 set(mull_header_dirs
