Extract original test execution into separate files

--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -67,6 +67,7 @@ set(mull_sources
   Parallelization/Tasks/ModuleLoadingTask.cpp
   Parallelization/Tasks/InstrumentedCompilationTask.cpp
   Parallelization/Tasks/OriginalCompilationTask.cpp
+  Parallelization/Tasks/OriginalTestExecutionTask.cpp
 )
 
 set(mull_header_dirs
