Extract mutant execution into separate files

--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -68,6 +68,7 @@ set(mull_sources
   Parallelization/Tasks/InstrumentedCompilationTask.cpp
   Parallelization/Tasks/OriginalCompilationTask.cpp
   Parallelization/Tasks/OriginalTestExecutionTask.cpp
+  Parallelization/Tasks/MutantExecutionTask.cpp
 )
 
 set(mull_header_dirs
