Add tests for merging of testees

--- a/unittests/CMakeLists.txt
+++ b/unittests/CMakeLists.txt
@@ -10,6 +10,7 @@ set(mull_unittests_sources
   MutatorsFactoryTests.cpp
   TesteesTests.cpp
   TaskExecutorTests.cpp
+  TesteesTests.cpp
 
   TestRunnersTests.cpp
   UniqueIdentifierTests.cpp
