--- a/unittests/CMakeLists.txt
+++ b/unittests/CMakeLists.txt
@@ -12,6 +12,7 @@ set(mull_unittests_sources
 
   TestRunnersTests.cpp
   UniqueIdentifierTests.cpp
+  TaskExecutorTests.cpp
 
   Mutators/MutatorsTests.cpp
   Mutators/NegateConditionMutatorTest.cpp
